<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Detalle">
    <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/toolbar"
            android:elevation="4dp"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/Theme.AppCompat.Light"/>

    <ImageView
            android:layout_width="250dp"
            android:layout_height="256dp" app:srcCompat="@drawable/foto_06"
            android:id="@+id/ivFoto" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
    <TextView
            android:text="Maricela Savela"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvnombre"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ivFoto" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="Contoso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvEmpresa" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvnombre"/>
    <TextView
            android:text="@string/titulo_edad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.46" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvEmpresa"/>
    <TextView
            android:text="@string/titulo_peso"
            android:layout_width="32dp"
            android:layout_height="18dp"
            android:id="@+id/textView4"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvEmpresa" app:layout_constraintStart_toEndOf="@+id/tvEdad"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/tvTelefono"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:text="56Kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPeso"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView9" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/textView11"
            app:layout_constraintHorizontal_bias="0.576"/>
    <TextView
            android:text="@string/titulo_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" app:layout_constraintStart_toEndOf="@+id/textView4"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvEmpresa"/>
    <TextView
            android:text=" 34 Años"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvEdad"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/tvPeso" app:layout_constraintHorizontal_bias="0.561"/>
    <TextView
            android:text="7321111"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTelefono"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintStart_toEndOf="@+id/tvPeso"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintHorizontal_bias="0.586"/>
    <TextView
            android:text="@string/titulo_email"
            android:layout_width="wrap_content"
            android:layout_height="14dp"
            android:id="@+id/textView9" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/textView11" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.254" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tvEdad"/>
    <TextView
            android:text="gerardnrmt@gmail.com"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:id="@+id/tvEmail"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/tvDireccion" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="Zaragoza 247"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDireccion"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintTop_toBottomOf="@+id/textView11" android:layout_marginEnd="36dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/titulo_direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="52dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/tvTelefono"/>
</android.support.constraint.ConstraintLayout>